Opened 7 years ago
Closed 7 years ago
#13706 closed bug (fixed)
Deskbar's "Tracker always first" broken
Reported by: | humdinger | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description ¶
This is hrev51414.
After the recent - much appreciated - introduction of a resizable Deskbar, Deskbar's "Tracker always first" shows an interesting breakage. When the option is activated, and Tracker's "Expando" widget points down, i.e. open Tracker windows are listed, opening Tracker windows result in their entries appearing and disappearing under Tracker and another app's Deskbar entry.
See the attached movie.
Change History (9)
by , 7 years ago
Attachment: | Merry-go-around.avi added |
---|
comment:2 by , 7 years ago
Was able to reproduce.
Must have following Deskbar settings turned on:
- Sort applications by name
- Tracker always first
- Show application expander
Tracker must have at least 1 window open, and must be expanded (arrow down) Deskbar must have another app running that has a Deskbar entry.
Fun little bug you've found. Appears to be an infinite loop somewhere.
comment:5 by , 7 years ago
Fixed again in hrev51425 please retest and report back here
The infinite loop should now be gone.
When you check and uncheck "Tracker always first" Deskbar does a little dance as it resorts the app and window lists. I will look into getting rid of this dance next.
comment:6 by , 7 years ago
Not sure why I haven't commented yet, but I confirm the loop's gone. Left is the bit of shuffling around you mentioned in the last comment. It's not really related to the "Tracker first" option, but sorting in general, i.e. "Sort applications by name" triggers it too.
comment:7 by , 7 years ago
I'm not sure what changed but the shuffling around of items seems to be fixed now
comment:8 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Yep. Cannot reproduce anymore either. Closing ticket as fixed (somehow).
Entries dis/appearing