src/apps/deskbar/ExpandoMenuBar.cpp
@@ -114,6 +114,15 @@ TExpandoMenuBar::TExpandoMenuBar(TBarView* barView, bool vertical)
 
 
 void
+TExpandoMenuBar::AllAttached()
+{
+	BMenuBar::AllAttached();
+
+	SizeWindow(0);
+}
+
+
+void
 TExpandoMenuBar::AttachedToWindow()
 {
 	BMenuBar::AttachedToWindow();
